@@ -1,4 +1,8 @@
 2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
+	Restore the mode name to "Kill Ring" if the filter regexp is
+	removed.
+
+2015-04-27 Andrew Burgess <andrew.burgess@embecosm.com>
 	The default for `browse-kill-ring-occur' is now to remove the
 	regexp that is currently in place, restoring all item in the
 	kill-ring to the display.  Previous regexp are still available in
